--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
         <title> Gavins Site! </title>
 </head>
 
-  
   <h1> TESTING GAVIN JENSEN !!! </h1>
-
+  <nav>
+      <li><a href="index.html"> Home </a></li>
+      <li><a href="index.html"> My Apps </a></li>
+      <li><a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/Calendars/Schedules/Bell-Schedule"> Westview </a></li>
+</nav>
 
  <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/mQ7wOEOep1ONBphg_R-zEAtNQJ385HUKclg9B9kR-9n/embed?nosource"></iframe>
      <center>
 
+       
 </html>
