--- a/myapps.html
+++ b/myapps.html
@@ -12,7 +12,7 @@
     <li> <a href="index.html"> Westview </a> </li>   
   </nav>
 <center>
-<iframe width="392" height="620" style=border: 0px;" src="<iframe width="392" height="620" style="border: 0px;" src= "https://studio.code.org/projects/applab/6w3qG5vMaR9Nj0XJoRVTwAo8gFldu7h4dixUqZQQrhI/embed"></iframe>
-<iframe width="392" height="620" style="border: 0px;" src=<iframe width="392" height="620" style="border: 0px;" src= "https://studio.code.org/projects/applab/GRqA020HKd07WKDs_I-92wB7RNyfJkjPnZs8W8gI-8E/embed"></iframe>
+	<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/6w3qG5vMaR9Nj0XJoRVTwAo8gFldu7h4dixUqZQQrhI/embed"></iframe>
+	<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/GRqA020HKd07WKDs_I-92wB7RNyfJkjPnZs8W8gI-8E/embed"></iframe>
 </center>
 </html>
