--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
         <nav>
       <li><a href="index.html"> Home </a></li>
-      <li><a href="index.html"> My Apps </a></li>
+      <li><a href="myapps.html"> My Apps </a></li>
       <li><a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/Calendars/Schedules/Bell-Schedule"> Westview </a></li>
                 
 </nav>
