--- a/myapps.html
+++ b/myapps.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://www.dunkindonuts.com/content/dam/dd/img/menu-redesign/donuts/VanillaFrostedSprinklesDonut_570x570.png">
-	<title> NICKS SITE! </title>
+	<title> Gavins Site! </title>
 </head>
 <body>
 	 <nav>
